Bug Fix: Column width of analyze-table Bug Fix: Select value and attributes from editor side panel

--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -145,7 +145,7 @@
 			        		check-all="[[checkAll]]"
 			        		on-checkall="onCheckAll"
 			        		num-active-backtests="[[checkedItems.length]]"
-			        		share-icon>
+			        		share-icon can-run>
 		        		</aq-analyze-home-header>
 		              	
 						<template is='dom-repeat' items="{{backtests}}" initial-count=10>
