Bug Fix 1. Update the forwardest status on stopping/starting 2. Check for variable "orders" in case of transaction-table
Feature
1. Update to backtest-detail view (on completion) only in case of non-console view

--- a/src/components/analyze/aq-analyze-backtest-detail.html
+++ b/src/components/analyze/aq-analyze-backtest-detail.html
@@ -30,7 +30,8 @@
 		      		backtest-id="[[backtestId]]" 
 		      		heading="[[heading]]" 
 		      		can-share
-		      		show-progress>
+		      		show-progress
+		      		show-full>
 	      		</aq-backtest-detail-item>
 			</div>
 		</aq-allpage-layout>
