--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -210,9 +210,7 @@
 
         <iron-signals on-iron-signal-forwardtest-added='onForwardtestAdded'></iron-signals>
 
-        <iron-signals on-iron-signal-forwardtest-stopped='onForwardtestStopped'></iron-signals>
-
-        <iron-signals on-iron-signal-forwardtest-deleted='onForwardtestDeleted'></iron-signals>
+       <iron-signals on-iron-signal-forwardtest-updated='onForwardtestUpdated'></iron-signals>
 
         <app-route
             route="{{route}}"
@@ -751,7 +749,7 @@
                 return (strategies && strategies.length > 0) || (searchParam && searchParam.search != "");
             },
 
-            onForwardtestStopped: function() {
+            onForwardtestUpdated: function() {
                 this.dirtyBit = 1;
             },
 
