Log-item [bracket] bug fix

--- a/src/components/common/aq-log-item-new.html
+++ b/src/components/common/aq-log-item-new.html
@@ -45,15 +45,15 @@
 		<div id='item' class="layout horizontal">
 			
 			<template is='dom-if' if="[[isError(messageType)]]">
-				<p class='error'>[[[toUpperCase(messageType)]]]</p>
+				<p class='error'>[[toUpperCase(messageType)]]</p>
 			</template>
 
 			<template is='dom-if' if="[[isWarning(messageType)]]">
-				<p class='warning'>[[[toUpperCase(messageType)]]]</p>
+				<p class='warning'>[[toUpperCase(messageType)]]</p>
 			</template>
 
 			<template is='dom-if' if="[[isInfo(messageType)]]">
-				<p class='info'>[[[toUpperCase(messageType)]]]</p>
+				<p class='info'>[[toUpperCase(messageType)]]</p>
 			</template>
 			<p id='message'>
 				<template is='dom-if' if='[[datetime]]'>
@@ -90,7 +90,7 @@
 			},
 
 			toUpperCase: function(messageType) {
-				return messageType.toUpperCase();
+				return "["+messageType.toUpperCase()+"]";
 			},
 
 			format: function(datetime) {
